# pdf_plumber_util

./: .env.example  .gitignore  ARCHITECTURE.md  BLOCK_GROUPING.md  CLAUDE.md  CLI_USAGE.md  DESIGN_DECISIONS.md  DOCUMENTATION_FRAMEWORK.md  PHASE_HISTORY.md  README.md  STATUS.md  WORK_LOG.md  analyzer_head.py  create_toc_fixture.py  get_fonts.py  get_lines.py  get_vectors.py  gpt4o.env  main.py  mkdocs.yml  performance_analysis.md  performance_test.sh  plumb3.py  plumb_layout.py  plumb_words.py  pyproject.toml  review_toc_accuracy.py  run_performance_tests.py  test_state_comparison.py  test_state_machine.py  test_toc_manual.py  word_analysis.py  word_attrib.py
.claude/agents/: analysis-results-validator.md  document-structure-analyst.md  llm-integration-optimizer.md  pdf-extraction-expert.md  prompt-optimization-expert.md  state-machine-developer.md  test-implementation-developer.md  testing-strategy-architect.md
.claude/commands/: commit-work.md  complete-checkpoint.md  update-status.md  update-worklog.md
design/: HEADER_FOOTER_DETECTION.md  LLM_INTEGRATION.md  LLM_STRATEGY.md  STATE_MACHINE_ARCHITECTURE.md
docs/: architecture.md  cli-usage.md  design-decisions.md  development.md  index.md  output-files.md  phase-history.md  refined_llm_architecture.md  status.md  test_docstring_guidelines.md  token_analysis_results.md
docs/analysis/: llm_prompt_strategy_analysis.md  llm_strategy_evolution.md  prompt_optimization_testing_analysis.md
docs/design/: LLM_INTEGRATION.md  PATTERN_DETECTION_ARCHITECTURE.md  PATTERN_DETECTION_EVOLUTION.md  STATE_MACHINE_ARCHITECTURE.md  STATE_MACHINE_IMPLEMENTATION.md  STATISTICAL_ANALYSIS_PIPELINE.md  TEXT_PROCESSING_AND_BLOCK_GROUPING.md
scripts/: analyze_tokens.py  create_llm_test_fixture.py  field_analysis.py  llm_header_footer_analysis.py  precision_analysis.py  token_counter.py
scripts/docs/: generate_development.py  generate_readme.py
src/pdf_plumb/: cli.py  config.py  pdf_plumb.py
tests/: conftest.py
tests/fixtures/: test_document_with_toc.json  test_h264_toc_pages.json  test_spacing_reconstruction.json  test_table_titles_not_section_headings.json  toc_fixtures.py
tests/golden/: __init__.py  expected_document_with_toc_detection_positive.json  expected_h264_no_toc_baseline.json  expected_h264_quality_thresholds.json  (+5 more)
(+184 files in other folders)
