[project]
name = "pdf-plumb"
version = "0.1.0"
description = "PDF text extraction and analysis tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdfminer-six>=20250327",
    "pdfplumber>=0.11.6",
    "pymupdf>=1.25.5",
]

[project.scripts]
pdf-plumb = "pdf_plumb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_plumb"]
