[project]
name = "pdf-plumb"
version = "0.1.0"
description = "PDF text extraction and analysis tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdfminer-six>=20250327",
    "pdfplumber>=0.11.6",
    "pymupdf>=1.25.5",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.2.1",
    "orjson>=3.8.0",
    "tiktoken>=0.9.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "mkdocs-gen-files>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
pdf-plumb = "pdf_plumb.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_plumb"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings[python]>=0.30.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests for full commands",
    "golden: Golden document tests using real LLM API calls",
    "slow: Tests that take more than a few seconds",
    "external: Tests that require external APIs"
]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-v"
]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning", 
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning"
]
